--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 <li><a href="https://tohindia.github.io/timesofhemp/can-cbd-replace-traditional-medications.html">Can CBD Replace Traditional Medications?</a></li>
 <li><a href="https://tohindia.github.io/timesofhemp/the-future-of-sustainable-and-eco-friendly-construction.html">The Future of Sustainable and Eco-Friendly Construction</a></li>
 <li><a href="https://tohindia.github.io/timesofhemp/hemp-protein-vs-whey-proteins.html">Hemp Protein vs. Whey Proteins: Which One is Best?</a></li>
-    <li><a href="https://tohindia.github.io/timesofhemp/the-science-behind-hempcrete.html">The Science Behind Hempcrete: Why It’s the Future of Green Construction</a></li>
+ <li><a href="https://tohindia.github.io/timesofhemp/the-science-behind-hempcrete.html">The Science Behind Hempcrete: Why It’s the Future of Green Construction</a></li>
+ <li><a href="https://tohindia.github.io/timesofhemp/hemp-seeds-and-heart-health.html">Hemp Seeds and Heart Health: How They Can Benefit You</a></li>
 </ol>
   </main>
 
