--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+        <title>Home | Times of Hemp</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta property="og:title" content="Home | Times of Hemp">
     <meta name="description" content="Explore how cannabis contributes to regenerative agriculture by restoring soil health, enhancing biodiversity, and promoting sustainability.">
-    <title>Home | Times of Hemp</title>
+
     <style>
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #f7f7f7; color: #222; line-height: 1.6; margin: 0; padding: 0; }
         header { background: #1b4332; color: #fff; text-align: center; padding: 40px 20px; }
