--- a/the-science-behind-hempcrete.html
+++ b/the-science-behind-hempcrete.html
@@ -102,7 +102,16 @@
 <p>Whether you&rsquo;re an architect, builder, or eco-conscious homeowner, embracing Hempcrete benefits today will create a better tomorrow.</p>
 <p>Join the green building revolution&mdash;Hempcrete is here to stay!</p>
 
-
+<h4 style="text-align: left;">Also read:</h4>
+<ol>
+<li><a href="https://tohindia.github.io/timesofhemp/7-things-everyone-should-know-about-cannabis.html">7 Things Everyone Should Know About Cannabis</a></li>
+<li><a href="https://tohindia.github.io/timesofhemp/role-and-benefits-of-cannabis-in-regenerative-agriculture.html">Role and Benefits of Cannabis in Regenerative Agriculture</a></li>
+<li><a href="https://tohindia.github.io/timesofhemp/can-cbd-replace-traditional-medications.html">Can CBD Replace Traditional Medications?</a></li>
+<li><a href="https://tohindia.github.io/timesofhemp/the-future-of-sustainable-and-eco-friendly-construction.html">The Future of Sustainable and Eco-Friendly Construction</a></li>
+<li><a href="https://tohindia.github.io/timesofhemp/hemp-protein-vs-whey-proteins.html">Hemp Protein vs. Whey Proteins: Which One is Best?</a></li>
+<li><a href="https://tohindia.github.io/timesofhemp/hemp-seeds-and-heart-health.html">Hemp Seeds and Heart Health: How They Can Benefit You</a></li>
+<li><a href="https://tohindia.github.io/timesofhemp/how-cbd-oil-is-transforming-skincare.html">How CBD Oil is Transforming Skincare </a></li>
+</ol>
         </main>
 
     <footer>
