--- a/7-things-everyone-should-know-about-cannabis.html
+++ b/7-things-everyone-should-know-about-cannabis.html
@@ -3,11 +3,35 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>7 Things Everyone Should Know About Cannabis — Times of Hemp</title>
-  <meta name="description" content="Seven essential things to know about cannabis: species, cannabinoids, medicinal uses, legal landscape, non-intoxicating products, hemp sustainability, safety tips and myths." />
-  <meta name="author" content="Times of Hemp" />
-  <link rel="canonical" href="https://tohindia.github.io/timesofhemp/7-things-everyone-should-know-about-cannabis.html" />
-    <style>
+<title>7 Things Everyone Should Know About Cannabis — Times of Hemp</title>
+ <meta name="description" content="Discover the 7 must-know facts about cannabis—from health benefits and legality to sustainability and common myths. Stay informed and elevate your cannabis IQ." />
+
+<link rel="canonical" href="https://tohindia.github.io/timesofhemp/7-things-everyone-should-know-about-cannabis.html">
+<meta property="og:locale" content="en" />
+<meta property="og:locale:alternate" content="en_IN" />
+<meta property="og:locale:alternate" content="en_US" />
+<meta property="og:locale:alternate" content="en_GB" />
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="Times of Hemp">
+<meta name="author" content="ToH Team">
+
+ <script type="application/ld+json">
+        {
+            "@context": "https://schema.org/",
+            "@type": "Product",
+            "name": "Times of Hemp",
+            "image": "https://tohindia.github.io/timesofhemp/timesofhemp.jpg",
+            "description": "Welcome to Times of Hemp.",
+            "aggregateRating": {
+                "@type": "AggregateRating",
+                "ratingValue": "4.7",
+                "bestRating": "5",
+                "worstRating": "1",
+                "ratingCount": "9950"
+            }
+        }
+</script>
+  <style>
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #f7f7f7; color: #222; line-height: 1.6; margin: 0; padding: 0; }
         header { background: #1b4332; color: #fff; text-align: center; padding: 40px 20px; }
         header h1 { font-size: 2.5em; margin-bottom: 10px; }
