--- a/role-and-benefits-of-cannabis-in-regenerative-agriculture.html
+++ b/role-and-benefits-of-cannabis-in-regenerative-agriculture.html
@@ -3,8 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explore how cannabis contributes to regenerative agriculture by restoring soil health, enhancing biodiversity, and promoting sustainability.">
     <title>Role and Benefits of Cannabis in Regenerative Agriculture | Times of Hemp</title>
+ <meta name="description" content="Learn how cannabis empowers farmers with eco-friendly practices and economic resilience in regenerative agriculture through sustainable, high-value crops." />
+
+<link rel="canonical" href="https://tohindia.github.io/timesofhemp/role-and-benefits-of-cannabis-in-regenerative-agriculture.html">
+<meta property="og:locale" content="en" />
+<meta property="og:locale:alternate" content="en_IN" />
+<meta property="og:locale:alternate" content="en_US" />
+<meta property="og:locale:alternate" content="en_GB" />
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="Times of Hemp">
+<meta name="author" content="ToH Team">
+
+ <script type="application/ld+json">
+        {
+            "@context": "https://schema.org/",
+            "@type": "Product",
+            "name": "Times of Hemp",
+            "image": "https://tohindia.github.io/timesofhemp/timesofhemp.jpg",
+            "description": "Welcome to Times of Hemp.",
+            "aggregateRating": {
+                "@type": "AggregateRating",
+                "ratingValue": "4.7",
+                "bestRating": "5",
+                "worstRating": "1",
+                "ratingCount": "9950"
+            }
+        }
+</script>
     <style>
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #f7f7f7; color: #222; line-height: 1.6; margin: 0; padding: 0; }
         header { background: #1b4332; color: #fff; text-align: center; padding: 40px 20px; }
