--- a/the-future-of-sustainable-and-eco-friendly-construction.html
+++ b/the-future-of-sustainable-and-eco-friendly-construction.html
@@ -3,14 +3,34 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>The Future of Sustainable and Eco-Friendly Construction — Times of Hemp</title>
-  <meta name="description" content="Explore whether CBD can replace traditional medications, its benefits, science, and limitations in modern medicine. A Times of Hemp article.">
-  <meta name="author" content="Times of Hemp">
-  <meta property="og:title" content="The Future of Sustainable and Eco-Friendly Construction — Times of Hemp">
-  <meta property="og:description" content="Explore the potential of CBD as an alternative to traditional pharmaceuticals with Times of Hemp.">
-  <meta property="og:image" content="https://via.placeholder.com/1200x630.png?text=Can+CBD+Replace+Traditional+Medications">
-  <meta property="og:type" content="article">
-  <meta property="og:site_name" content="Times of Hemp">
+ <title>The Future of Sustainable and Eco-Friendly Construction — Times of Hemp</title>
+ <meta name="description" content="Looking for sustainable building materials? Learn how hempcrete is reshaping green construction with energy efficiency, mold resistance, and low environmental impact." />
+
+<link rel="canonical" href="https://tohindia.github.io/timesofhemp/the-future-of-sustainable-and-eco-friendly-construction.html">
+<meta property="og:locale" content="en" />
+<meta property="og:locale:alternate" content="en_IN" />
+<meta property="og:locale:alternate" content="en_US" />
+<meta property="og:locale:alternate" content="en_GB" />
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="Times of Hemp">
+<meta name="author" content="ToH Team">
+
+ <script type="application/ld+json">
+        {
+            "@context": "https://schema.org/",
+            "@type": "Product",
+            "name": "Times of Hemp",
+            "image": "https://tohindia.github.io/timesofhemp/timesofhemp.jpg",
+            "description": "Welcome to Times of Hemp.",
+            "aggregateRating": {
+                "@type": "AggregateRating",
+                "ratingValue": "4.7",
+                "bestRating": "5",
+                "worstRating": "1",
+                "ratingCount": "9950"
+            }
+        }
+</script>
 <style>
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #f7f7f7; color: #222; line-height: 1.6; margin: 0; padding: 0; }
         header { background: #1b4332; color: #fff; text-align: center; padding: 40px 20px; }
